--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@
   --secundary_header: rgb(93, 92, 92);
   --greySpace: rgb(234, 231, 231);
   --border-radius: 10px;
-  --colorResalt: rgb(85, 155, 85)
+  --colorResalt: rgb(85, 155, 85);
 }
 
 
@@ -125,6 +125,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+.bx{
+  width: 1000px;
+  margin: 0 auto;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
