feat: add color to icon in TrendingCard module

--- a/public/styles/TrendingCard.module.css
+++ b/public/styles/TrendingCard.module.css
@@ -32,7 +32,7 @@
     justify-content: space-between;
 }
 .icon{
-    color: var(--font_color);
+    color: rgb(206, 10, 10);
     font-size: 1.5em;
 }
 .price{
