--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -50,6 +50,7 @@
     justify-content: space-between;
     padding-left: 10px;
     padding-right: 10px;
+    border: 1px solid rgba(169, 167, 167, 0.4);
 }
 .input_bx input{
     position: relative;
