--- a/public/styles/CategoriesCrad.module.css
+++ b/public/styles/CategoriesCrad.module.css
@@ -1,22 +1,42 @@
 .card{
     position: relative;
     width: 150px;
-    height: 150px;
+    height: 200px;
     background: var(--greySpace);
     border-radius: var(--border-radius);
     /*margin-right: 16px;*/
     cursor: pointer;
-    padding: 10px;
+    /*padding: 10px;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 }
-
+.header{
+    position: absolute;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background: rgba(73, 120, 68, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+}
+.header h4{
+    font-size: 20px;
+    font-family: "PoppinsBolder";
+    color: whitesmoke;
+}
 .image_bx{
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
     border-radius: var(--border-radius);
     overflow: hidden;
+   
+}
+.header:hover{
+    background: rgba(101, 165, 94, 0.4);
 }
