--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -10,7 +10,7 @@
 .front_page{
     position: relative;
     width: 100%;
-    height: 100dvh;
+    height: calc(100dvh - 80px);
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -104,7 +104,7 @@
 .categories{
     position: relative;
     width: 100%;
-    height: 35dvh;
+    min-height: 35dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,7 +126,7 @@
 .offets_bx{
     position: relative;
     width: 100%;
-    min-height: 100dvh;
+    min-height: calc(100dvh - 80px);
     display: grid;
     grid-template-columns:  1fr  2.5fr; /* El primer elemento ocupa  1/3 del espacio, el segundo  2/3 */
     grid-template-rows: auto; /* Ajusta automáticamente la altura de las filas */
