--- a/public/styles/Search.module.css
+++ b/public/styles/Search.module.css
@@ -1,7 +1,7 @@
 .cont{
     position: relative;
     width: 100%;
-    min-height: 100dvh;
+    min-height: calc(100dvh - 80px);
 }
 .header{
     position: relative;
