--- a/public/styles/SideBar.module.css
+++ b/public/styles/SideBar.module.css
@@ -6,6 +6,7 @@
     z-index: 1000000000;
     display: flex;
     justify-content: flex-end;
+    
 }
 .bx{
     position: relative;
@@ -13,6 +14,7 @@
     padding: 20px;
     height: 100%;
     background: whitesmoke;
+    border-left: 1px solid rgba(169, 167, 167, 0.4);
 }
 .close{
     position: relative;
@@ -26,7 +28,6 @@
     cursor: pointer;
     width: 30px;
     height: 30px;
-    background: red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,6 +54,7 @@
     align-items: center;
     padding: 10px;
     margin-top: 16px;
+    border-radius: var(--border-radius);
 }
 .name{
     font-size: 20px;
@@ -60,7 +62,7 @@
 }
 .link{
     position: relative;
-    font-size: 0.8em;
+    /*font-size: 0.8em;*/
     transition: 0.3s;
     left: 0;
 }
