feat: make Home elements responsives

--- a/public/styles/CategoriesCrad.module.css
+++ b/public/styles/CategoriesCrad.module.css
@@ -1,6 +1,6 @@
 .card{
     position: relative;
-    width: 150px;
+    /*width: 150px;*/
     height: 200px;
     background: var(--greySpace);
     border-radius: var(--border-radius);
