--- a/public/styles/Navbar.module.css
+++ b/public/styles/Navbar.module.css
@@ -33,3 +33,14 @@
     font-size: 1.3em;
     cursor: pointer;
 }
+.logo{
+    position: relative;
+    width: 80px;
+    height: 60px;
+}
+@media(max-width: 1020px){
+    .cont{
+      width: 90%;
+      
+    }
+  }
