--- a/public/styles/SideBar.module.css
+++ b/public/styles/SideBar.module.css
@@ -14,7 +14,7 @@
     padding: 20px;
     height: 100%;
     background: whitesmoke;
-    border-left: 1px solid rgba(169, 167, 167, 0.4);
+    border: 1px solid rgba(169, 167, 167, 0.4);
 }
 .close{
     position: relative;
@@ -49,12 +49,18 @@
 .logo{
     position: relative;
     width: 100%;
+    height: 90px;
     background: var(--greySpace);
     display: flex;
     align-items: center;
     padding: 10px;
     margin-top: 16px;
     border-radius: var(--border-radius);
+}
+.image_bx{
+    position: relative;
+    width: 80px;
+    height: 60px;
 }
 .name{
     font-size: 20px;
@@ -69,5 +75,19 @@
 .link:hover{
     color: var(--colorResalt);
     left: 10px;
-    
 }
+
+@media(max-width:544px){
+    .bx{
+        width: 80%;
+    }
+}
+@media(max-width: 420px){
+    .image_bx{
+        position: relative;
+        width: 70px;
+        height: 50px;
+        padding-left: 10px;
+    }
+
+  }
