--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -15,7 +15,8 @@
     position: relative;
     width: 600px;
     height: 20vh;
-    min-height: 300px;  
+    min-height: 300px;
+    margin-top: 10dvh;  
 }
 .header h1{
     font-family: "PoppinsBolder";
