--- a/public/styles/SideBar.module.css
+++ b/public/styles/SideBar.module.css
@@ -1,7 +1,7 @@
 .cont1{
     position: fixed;
     width: 100%;
-    height: 100dvh;
+    height: 100%;
     background: rgba(245, 245, 245, 0.4);
     z-index: 1000000000;
     display: flex;
@@ -88,6 +88,9 @@
         width: 70px;
         height: 50px;
         padding-left: 10px;
+    }
+    .logo{
+        height: 60px;
     }
 
   }
