--- a/public/styles/Details.module.css
+++ b/public/styles/Details.module.css
@@ -41,14 +41,14 @@
 }
 .image1{
     position: relative;
-    width: 60%;
+    width: 40%;
     height: 50dvh;
     border-radius: var(--border-radius);
     overflow: hidden;
 }
 .gallery{
     position: relative;
-    width: 50%;
+    width: 100%;
     min-height: 50dvh;
     display: flex;
     align-items: center;
@@ -58,10 +58,10 @@
 .images_bx{
     position: relative;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
+    margin-top: 20px;
 }
 .details_bx{
     position: relative;
@@ -72,11 +72,14 @@
 }
 .info{
     position: relative;
-    width: 40%;
-    height: 50dvh;
+    width: 100%;
     display:flex;
     justify-content: space-around;
     flex-direction: column;
+}
+.product_info{
+    position: relative;
+    width: 50%;
 }
 .name{
     position: relative;
@@ -84,6 +87,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 16px;
 }
 .name span{
     position: relative;
@@ -92,6 +96,7 @@
 }
 .text{
     font-size: 0.8em;
+    margin-bottom: 16px;
 }
 .btn{
     position: relative;
@@ -120,4 +125,24 @@
     position: relative;
     font-size: 0.8em;
     color: rgb(218, 185, 3);
+}
+
+@media(max-width:804px){
+    .gallery{
+        flex-direction: column;
+    }
+    .product_info{
+        width: 100%;
+    }
+    .name{
+        justify-content: flex-start;
+    }
+    .stars_bx{
+        margin-left: 16px;
+    }
+    .image1{
+        width: 80%;
+        margin-bottom: 30px;
+        height: 30vh;
+    }
 }
