--- a/public/styles/Search.module.css
+++ b/public/styles/Search.module.css
@@ -1,13 +1,13 @@
 .cont{
     position: relative;
     width: 100%;
-    min-height: calc(100dvh - 80px);
+    min-height: calc(100vh - 80px);
 }
 .header{
     position: relative;
     width: 100%;
     background: var(--greySpace);
-    height: 20dvh;
+    height: 20vh;
 }
 .content{
     position: relative;
