--- a/public/styles/Search.module.css
+++ b/public/styles/Search.module.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     min-height: calc(100vh - 80px);
+    padding-bottom: 5vh;
 }
 .header{
     position: relative;
