--- a/public/styles/Shop.module.css
+++ b/public/styles/Shop.module.css
@@ -1,7 +1,8 @@
 .cont{
     position: relative;
     width: 100%;
-    min-height: calc(100dvh - 80px);
+    min-height: calc(100vh - 80px);
+    padding-bottom: 5vh;
 }
 .header{
     position: relative;
