--- a/public/styles/Shop.module.css
+++ b/public/styles/Shop.module.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     background: var(--greySpace);
-    height: 20dvh;
+    height: 20vh;
 }
 .plats_bx{
     position: relative;
