--- a/public/styles/CartCard.module.css
+++ b/public/styles/CartCard.module.css
@@ -13,7 +13,7 @@
 
 .image_bx{
     position: relative;
-    width: 150px;
+    width: 80px;
     height: 100%;
     border-radius: var(--border-radius);
     overflow: hidden;
@@ -31,12 +31,12 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    align-items: flex-start;
+    justify-content: center;
 }
 .name{
     position: relative;
-    font-size: 16px;
+    font-size: 0.8em;
 
 }
 .price{
