--- a/public/styles/Register.module.css
+++ b/public/styles/Register.module.css
@@ -135,9 +135,27 @@
     font-size: 0.8em;
     margin-top: 20px;
 }
+.error{
+    font-size: 0.7em;
+    color: red;
+}
+.loginError{
+    font-size: 0.7em;
+    color: red;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 16px;
+}
+@media(max-width: 1050px){
+    .navbar{
+        width: 90%;
+    }
+}
 
 @media(max-width: 430px){
     .form{
         width: 90%;
     }
+    
 }
